update vagrant tomcat java heap size to avoid out of memory errors